# cordis

./: .dockerignore  .env.backend.example  .env.docker.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  alembic.ini  compose.yml  manual_testing.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20260412_000001_repository_visibility_and_public_urls.py  631185907f73_create_tables.py  715b952170ff_create_tables.py
cordis/: __init__.py
cordis/backend/: __main__.py  app.py  config.py  constants.py  database.py  enums.py  migrations.py  settings.py
cordis/backend/api/: __init__.py  errors.py  router.py
cordis/backend/api/dependencies/: __init__.py  auth.py  database.py  repository.py
cordis/backend/api/v1/: __init__.py  artifacts.py  auth.py  repositories.py  resources.py  roles.py  tags.py  uploads.py  users.py  versions.py
cordis/backend/bootstrap/: __init__.py  runtime.py
cordis/backend/db/: __init__.py  base.py
cordis/backend/exceptions/: __init__.py  app_status.py  exception_handlers.py  exceptions.py
cordis/backend/models/: artifact.py  base.py  repository.py  repository_member.py  role.py  upload_session.py  upload_session_part.py  user.py  version.py  version_artifact.py  version_tag.py
cordis/backend/policies/: __init__.py  artifact.py  auth.py  base.py  download.py  repository.py  role.py  tag.py  upload.py  user.py  version.py
cordis/backend/repositories/: base.py  repository_member.py  unit_of_work.py  upload_session.py  upload_session_part.py  version_artifact.py  version_tag.py
cordis/backend/schemas/: artifact.py  auth.py  role.py  upload.py  user.py  version.py
cordis/backend/schemas/requests/: __init__.py  artifact.py  repository.py  role.py  tag.py  upload.py  user.py  version.py
cordis/backend/schemas/responses/: __init__.py  artifact.py  auth.py  repository.py  role.py  tag.py  upload.py  user.py  version.py
cordis/backend/security/: __init__.py  core.py  passwords.py  tokens.py  userinfo.py
cordis/backend/security/authentication/: __init__.py  base.py  bearer_token_backend.py
cordis/backend/services/: __init__.py  artifact.py  auth.py  authorization.py  base.py  download.py  repository.py  role.py  tag.py  upload.py  user.py  version.py  version_artifact.py
cordis/backend/storage/: __init__.py  aws.py  errors.py  factory.py  minio.py  protocol.py  s3.py  types.py
cordis/backend/utils/: logging.py
cordis/backend/validators/: __init__.py  artifact.py  auth.py  base.py  download.py  repository.py  role.py  tag.py  upload.py  user.py  version.py
cordis/cli/: __main__.py  client.py  errors.py  presentation.py
cordis/cli/commands/: __init__.py  common.py  repository.py  resource.py  root.py  tag.py  user.py  version.py
cordis/cli/config/: __init__.py  files.py
cordis/cli/sdk/: __init__.py  client.py  transfers.py
cordis/cli/sdk/apis/: __init__.py  auth.py  base.py  repositories.py  tags.py  users.py  versions.py
cordis/cli/transfer/: __init__.py  constants.py  files.py
cordis/cli/utils/: files.py  httpx_service.py  presentation.py
cordis/sdk/: __init__.py  client.py  errors.py  httpx_service.py  transfers.py
cordis/sdk/apis/: __init__.py  auth.py  base.py  repositories.py  tags.py  users.py  versions.py
dockers/: .env.docker.example  .env.production.example  Dockerfile  compose.yml
docs/: architecture.md  backend-api.md  cli.md  configuration.md  data-model.md  development.md  docker.md  getting-started.md  index.md  production.md  release.md  testing.md  transfer-workflows.md
scripts/: build_cli_sdk_dist.py
src/cordis/backend/: __main__.py  api.py  app.py  config.py  errors.py  settings.py  versioning.py
src/cordis/backend/api/: common.py  errors.py
src/cordis/backend/api/dependencies/: __init__.py  auth.py  database.py  repository.py
src/cordis/backend/api/v1/: artifacts.py  auth.py  repositories.py  resources.py  roles.py  uploads.py  users.py  versions.py
src/cordis/backend/db/: session.py
src/cordis/backend/models/: __init__.py  base.py  repository.py  role.py  user.py  version.py  version_tag.py
src/cordis/backend/repositories/: __init__.py  artifact.py  base.py  repository.py  role.py  unit_of_work.py  upload_session.py  user.py  version.py  version_artifact.py
src/cordis/backend/schemas/: __init__.py  repository.py  tag.py
src/cordis/backend/security/: tokens.py
src/cordis/backend/services/: artifact.py  auth.py  authorization.py  base.py  download.py  repository.py  role.py  tag.py  upload.py  user.py  version.py  version_artifact.py
src/cordis/backend/storage/: __init__.py  errors.py  factory.py  protocol.py
src/cordis/backend/utils/: logging.py
src/cordis/backend/validators/: __init__.py
src/cordis/cli/: __init__.py  __main__.py  main.py
src/cordis/cli/commands/: root.py
src/cordis/cli/config/: files.py
src/cordis/cli/sdk/: client.py
src/cordis/cli/transfer/: __init__.py  cache.py
src/cordis/cli/utils/: httpx_service.py
src/cordis/shared/: __init__.py  settings.py
tests/backend/: test_app.py  test_artifact_domain.py  test_auth.py  test_authorization.py  test_download_domain.py  test_foundation.py  test_management_surfaces.py  test_repository_domain.py  test_security_core.py  test_startup_bootstrap.py  test_storage_boundary.py  test_tag_domain.py  test_upload_session_domain.py  test_version_domain.py
tests/cli/: test_build_cli_sdk_dist.py  test_main.py  test_presentation_utils.py  test_sdk_client.py  test_transfer_files.py
