[project]
name = "cordis"
version = "0.1.0"
description = "A file and artifact management service built for large-scale objects."
authors = [
    { name = "nhanphanvan99", email = "nhanphanvan99@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic (>=1.18.4,<2.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "cryptography (>=46.0.6,<47.0.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pathspec (>=1.0.0,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "rich (>=14.2.0,<15.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "typer (>=0.24.1,<0.25.0)",
    "uvicorn (>=0.43.0,<0.44.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "tenacity (>=9.1.4,<10.0.0)",
]

[project.scripts]
cordis = "cordis.cli.main:app"
cordis-server = "cordis.backend.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "cordis" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.9"
mypy = "^1.20.0"
pylint = "^4.0.5"
black = "^26.3.1"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"

[tool.ruff]
target-version = "py310"
line-length = 120
output-format = "concise"
show-fixes = true
unsafe-fixes = false
preview = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "UP",
    "I",
    "Q",
    "W",
]
unfixable = ["B"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.pylint]
disable = [
    "too-many-instance-attributes",
    "too-many-positional-arguments",
    "too-few-public-methods",
    "too-many-return-statements",
    "too-many-locals",
    "too-many-arguments",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "import-outside-toplevel",
    "cyclic-import",
    "redefined-builtin",
    "broad-exception-caught",
    "broad-exception-raised",
    "super-init-not-called",
    "duplicate-code",
    "fixme",
    "logging-fstring-interpolation",
    "arguments-differ",
    "too-many-statements",
    "too-many-public-methods",
    "invalid-name",
]
persistent = false
reports = false
max-branches = 20
output-format = "colorized"
max-line-length = 120

[tool.mypy]
no_implicit_optional = false
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = true
warn_no_return = false
warn_unreachable = true
strict = true
strict_optional = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
